--- a/src/Portfolio/Views/Shared/_Layout.cshtml
+++ b/src/Portfolio/Views/Shared/_Layout.cshtml
@@ -3,6 +3,12 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <script src="~/js/jquery-3.2.1.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js"
+            integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+            crossorigin="anonymous"></script>
+    <script src="~/js/scripts.js" type="text/javascript"></script>
+    <link href="~/css/styles.css" rel="stylesheet" type="text/css" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
