link bootstrap cdn to layout page.

--- a/src/Portfolio/Views/Home/Index.cshtml
+++ b/src/Portfolio/Views/Home/Index.cshtml
@@ -3,4 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Cassandra Musolf</h1>
+<div class="container">
+    <h1>Cassandra Musolf</h1>
+    <h2>Junior Web Developer & Designer</h2>
+</div>
