add a jQuery plugin typeit to get typewriter effect for my name.

--- a/src/Portfolio/Views/Home/Index.cshtml
+++ b/src/Portfolio/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 }
 
 <div class="container">
-    <h1>Cassandra Musolf</h1>
-    <h2>Junior Web Developer & Designer</h2>
+    <h1 class="title"></h1>
 </div>
+
