--- a/src/Portfolio/Views/Project/Index.cshtml
+++ b/src/Portfolio/Views/Project/Index.cshtml
@@ -3,9 +3,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Github Projects</h1>
+<div class="container">
+    <h1>Github Projects</h1>
 
 
-<div class="projects text-center">
+    <div class="projects text-center">
 
+    </div>
 </div>
