add styling to the main index page, play around with adding scrolling functionality.

--- a/src/Portfolio/Views/Home/Index.cshtml
+++ b/src/Portfolio/Views/Home/Index.cshtml
@@ -3,7 +3,24 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container">
-    <h1 class="title"></h1>
+<div class="jumbotron text-center">
+    <h1>Cassandra Musolf</h1>
+    <h2 class="title"></h2>
 </div>
 
+
+<div>
+
+    <div class="section2">
+        <h1></h1>
+    </div>
+
+    <div id="about" class="section3">
+        <h1>Hello! I am a web developer and designer and would love to work with you.</h1>
+    </div>
+
+
+    <div id="projects" class="section4">
+        <h1 class="projects"></h1>
+    </div>
+</div>
