--- a/src/Portfolio/Views/Shared/_Layout.cshtml
+++ b/src/Portfolio/Views/Shared/_Layout.cshtml
@@ -15,6 +15,17 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
+    <nav class="navbar page-navigation">
+        <div class="container-fluid">
+            <ul class="nav nav-pills nav-justified">
+                <li><a href="/">HOME</a></li>
+                <li><a href="#about">ABOUT ME</a></li>
+                <li><a href="#projects">MY WORK</a></li>
+                <li><a href="#">CONTACT</a></li>
+                <li><a href="#">BLOG</a></li>
+            </ul>
+        </div>
+    </nav>
     <div>
         @RenderBody()
     </div>
