--- a/src/Portfolio/wwwroot/css/styles.css
+++ b/src/Portfolio/wwwroot/css/styles.css
@@ -1,37 +1,13 @@
-﻿.title {
-    animation: type 4s steps(60, end); 
+﻿.jumbotron {
+    height: 300px;
 }
 
-/* GLOBAL STYLES */
-body {
-  background: #333;
-  color: #fff;
-  font-family: monospace;
-  padding-top: 5em;
-  display: flex;
-  justify-content: center;
+.section2 {
+    margin-top: -30px;
+    height: 500px;
+    background-color: dimgrey;
 }
 
-/* DEMO-SPECIFIC STYLES */
-.title h1 {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
-  animation: 
-    typing 5.5s steps(end),
-    blink-caret .75s step-end infinite;
-}
-
-/* The typing effect */
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: orange; }
+#about {
+    height: 500px;
 }
