add styling and contact form.

--- a/src/Portfolio/Views/Home/Index.cshtml
+++ b/src/Portfolio/Views/Home/Index.cshtml
@@ -16,11 +16,44 @@
     </div>
 
     <div id="about" class="section3">
-        <h1>Hello! I am a web developer and designer and would love to work with you.</h1>
+        <h1 class="about-title text-center">ABOUT ME.</h1>
+        <h1 class="about-text text-center">Hello! I am a web developer and designer and would love to work with you.</h1>
     </div>
 
 
     <div id="projects" class="section4">
-        <h1 class="projects"></h1>
+        <div class="container">
+            <h1 class="work-title text-center">MY WORK.</h1>
+            <h3 class="projects text-center"></h3>
+        </div>
+    </div>
+
+    <div id="contact" class="section5">
+        <div class="container">
+            <h1 class="contact-title text-center">CONTACT ME.</h1>
+            <h1 class="contact-form text-center">Are you interested in working together? Contact me.</h1>
+            <form>
+                <div class="col-md-6 form-line">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Name">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" placeholder="Email Address">
+                    </div>
+                    <div class="form-group">
+                        <input type="tel" class="form-control" placeholder="Phone Number">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="Enter Your Message"></textarea>
+                    </div>
+                    <div>
+                        <button type="button" class="btn btn-default btn-lg submit">Send Message</button>
+                    </div>
+
+                </div>
+        </form>
+        </div>
     </div>
 </div>
