--- a/src/Portfolio/Views/Shared/_Layout.cshtml
+++ b/src/Portfolio/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 <li><a href="/">HOME</a></li>
                 <li><a href="#about">ABOUT ME</a></li>
                 <li><a href="#projects">MY WORK</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="#contact">CONTACT</a></li>
                 <li><a href="#">BLOG</a></li>
             </ul>
         </div>
