--- a/src/Portfolio/Views/Home/Index.cshtml
+++ b/src/Portfolio/Views/Home/Index.cshtml
@@ -16,8 +16,10 @@
     </div>
 
     <div id="about" class="section3">
-        <h1 class="about-title text-center">ABOUT ME.</h1>
-        <h1 class="about-text text-center">Hello! I am a web developer and designer and would love to work with you.</h1>
+        <div class="container">
+            <h1 class="about-title text-center">ABOUT ME.</h1>
+            <h1 class="about-text text-center">Hello! I am a web developer and designer and would love to work with you.</h1>
+        </div>
     </div>
 
 
