--- a/src/Portfolio/wwwroot/css/styles.css
+++ b/src/Portfolio/wwwroot/css/styles.css
@@ -1,5 +1,5 @@
 ﻿.jumbotron {
-    height: 300px;
+    height: 500px;
 }
 
 .section2 {
@@ -29,9 +29,10 @@
   width: 100%;
   width: 100vw;
   height: 550px;
-  background: #3a6186; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #3a6186 , #89253e); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #3a6186 , #89253e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: #000000;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     color : #fff;    
 }
 .contact-section{
@@ -68,5 +69,4 @@ textarea.form-control {
   width: 150px;
   background-color: transparent;
   color: #fff;
-
 }
