add media query to make section larger so they don't overlap when screen size is smaller.

--- a/src/Portfolio/Views/Home/Index.cshtml
+++ b/src/Portfolio/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="jumbotron text-center">
-    <h1>Cassandra Musolf</h1>
+    <h1>CASSANDRA MUSOLF</h1>
     <h2 class="title"></h2>
 </div>
 
@@ -17,23 +17,32 @@
 
     <div id="about" class="section3">
         <div class="container">
-            <h1 class="about-title text-center">ABOUT ME.</h1>
-            <h1 class="about-text text-center">Hello! I am a web developer and designer and would love to work with you.</h1>
+            <h1 class="about-title text-left">ABOUT ME</h1>
+            <hr />
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-8">
+                <h3 class="about-text text-center">Hello! I am a junior web developer and designer. I recently attended a six month web development program where I learned how to code and create beautiful products. I love being able to build take an idea and build it, from a blank screen to a fully functioning web application. I would love to chat with you to see if I can bring your idea come to life!</h3>
+            </div>
+            <div class="col-md-2">
+            </div>
         </div>
     </div>
 
 
     <div id="projects" class="section4">
         <div class="container">
-            <h1 class="work-title text-center">MY WORK.</h1>
+            <h1 class="work-title text-left">MY WORK</h1>
+            <hr />
             <h3 class="projects text-center"></h3>
         </div>
     </div>
 
     <div id="contact" class="section5">
         <div class="container">
-            <h1 class="contact-title text-center">CONTACT ME.</h1>
-            <h1 class="contact-form text-center">Are you interested in working together? Contact me.</h1>
+            <h1 class="contact-title text-left">CONTACT ME.</h1>
+            <hr />
+            <h3 class="contact-form text-center">Are you interested in working together? Contact me.</h3>
             <form>
                 <div class="col-md-6 form-line">
                     <div class="form-group">
