--- a/src/Portfolio/wwwroot/css/styles.css
+++ b/src/Portfolio/wwwroot/css/styles.css
@@ -1,5 +1,6 @@
 ﻿.jumbotron {
     height: 500px;
+    background-image: url(../images/blackwhite.png);
 }
 
 .section2 {
@@ -24,14 +25,13 @@
 
 #contact{
     
-    font-family: 'Teko', sans-serif;
   padding-top: 60px;
   width: 100%;
   width: 100vw;
-  height: 550px;
-background: #000000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+background: #000000; 
+background: -webkit-linear-gradient(to right, #434343, #000000); 
+background: linear-gradient(to right, #434343, #000000); 
 
     color : #fff;    
 }
@@ -69,4 +69,20 @@ textarea.form-control {
   width: 150px;
   background-color: transparent;
   color: #fff;
+}
+
+.col-md-4 {
+    padding: 30px;
+    box-shadow: 2px 2px 2px grey;
+    height: 272px;
+}
+
+.about-text {
+    padding-top: 20px;
+}
+
+@media (max-width: 992px) {
+  .section4 {
+    height: 1000px;
+  }
 }
