--- a/src/Portfolio/Views/Home/Index.cshtml
+++ b/src/Portfolio/Views/Home/Index.cshtml
@@ -4,15 +4,18 @@
 }
 
 <div class="jumbotron text-center">
-    <h1>CASSANDRA MUSOLF</h1>
-    <h2 class="title"></h2>
+    <img class="img-responsive" src="~/images/blackwhite.png" />
+
 </div>
 
 
 <div>
 
-    <div class="section2">
-        <h1></h1>
+    <div class="section2 text-center">
+        <div class="container">
+            <h1 class="name">CASSANDRA MUSOLF</h1>
+            <h2 class="title"></h2>
+        </div>
     </div>
 
     <div id="about" class="section3">
