--- a/src/Portfolio/Views/Shared/_Layout.cshtml
+++ b/src/Portfolio/Views/Shared/_Layout.cshtml
@@ -10,12 +10,14 @@
     <script src="https://cdn.jsdelivr.net/jquery.typeit/4.4.0/typeit.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/35c6199759.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="~/js/scripts.js" type="text/javascript"></script>
     <link href="~/css/styles.css" rel="stylesheet" type="text/css" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <nav class="navbar page-navigation">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <ul class="nav nav-pills nav-justified">
                 <li><a href="/">HOME</a></li>
